--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 
   <repositories>
     <repository>
+      <id>hortonworks</id>
+      <name>hortonworks repo</name>
+      <url>http://repo.hortonworks.com/content/repositories/releases/</url>
+    </repository>
+    <repository>
       <id>sonatype.release</id>
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
     </repository>
@@ -67,11 +72,11 @@
     <cdap.version>4.3.2</cdap.version>
     <hydrator.version>1.8.2</hydrator.version>
     <spark1.version>1.6.1</spark1.version>
-    <spark2.version>2.2.0</spark2.version>
+    <spark2.version>1.6.2.2.5.3.0-37</spark2.version>
     <widgets.dir>widgets</widgets.dir>
     <docs.dir>docs</docs.dir>
     <kafka8.version>0.8.2.2</kafka8.version>
-    <kafka10.version>0.10.2.0</kafka10.version>
+    <kafka10.version>0.10.0.2.5.3.0-37</kafka10.version>
     <hadoop.version>2.3.0</hadoop.version>
     <main.basedir>${project.basedir}</main.basedir>
   </properties>
