--- a/kafka-plugins-0.10/pom.xml
+++ b/kafka-plugins-0.10/pom.xml
@@ -5,13 +5,13 @@
   <parent>
     <artifactId>kafka-plugins</artifactId>
     <groupId>co.cask.hydrator</groupId>
-    <version>1.8.2-SNAPSHOT</version>
+    <version>1.8.2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <name>Apache Kafka 0.10 plugins</name>
   <artifactId>kafka-plugins</artifactId>
-  <version>1.8.2-SNAPSHOT-0.10.2.0</version>
+  <version>1.8.2-0.10.2.0</version>
 
   <dependencies>
     <dependency>
