--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>5.0.0</cdap.version>
-    <hydrator.version>2.0.0</hydrator.version>
+    <cdap.version>5.1.0-SNAPSHOT</cdap.version>
+    <hydrator.version>2.1.0-SNAPSHOT</hydrator.version>
     <spark1.version>1.6.1</spark1.version>
     <spark2.version>2.2.0</spark2.version>
     <widgets.dir>widgets</widgets.dir>
@@ -80,6 +80,8 @@
     <kafka8.version>0.8.2.2</kafka8.version>
     <kafka10.version>0.10.2.0</kafka10.version>
     <hadoop.version>2.3.0</hadoop.version>
+    <netty.version>4.1.16.Final</netty.version>
+    <netty-http.version>1.0.0</netty-http.version>
     <main.basedir>${project.basedir}</main.basedir>
   </properties>
 
@@ -264,6 +266,18 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>13.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>${netty.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>co.cask.http</groupId>
+      <artifactId>netty-http</artifactId>
+      <version>${netty-http.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
