(CDAP-14422) Change to use file to store offset information instead of table
- Big refactoring to consolidate highly duplicated code between
  Kafka 0.8 and Kafka 0.10 implementations
- Introduced a common module for the common implementation

--- a/kafka-plugins-0.10/pom.xml
+++ b/kafka-plugins-0.10/pom.xml
@@ -15,6 +15,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>co.cask.hydrator</groupId>
+      <artifactId>kafka-plugins-common</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka_2.11</artifactId>
       <version>${kafka10.version}</version>
@@ -126,6 +131,13 @@
       <groupId>co.cask.cdap</groupId>
       <artifactId>cdap-data-streams2_2.11</artifactId>
       <version>${cdap.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>co.cask.hydrator</groupId>
+      <artifactId>kafka-plugins-common</artifactId>
+      <version>${project.parent.version}</version>
+      <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
