--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
   <modules>
     <module>kafka-plugins-0.8</module>
     <module>kafka-plugins-0.10</module>
+    <module>kafka-plugins-common</module>
   </modules>
 
   <developers>
