--- a/kafka-plugins-0.10/pom.xml
+++ b/kafka-plugins-0.10/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>kafka-plugins</artifactId>
     <groupId>co.cask.hydrator</groupId>
-    <version>1.9.0-SNAPSHOT</version>
+    <version>1.9.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -162,8 +162,8 @@
         <version>1.0.1</version>
         <configuration>
           <cdapArtifacts>
-            <parent>system:cdap-data-pipeline[5.0.0,6.0.0-SNAPSHOT)</parent>
-            <parent>system:cdap-data-streams[5.0.0,6.0.0-SNAPSHOT)</parent>
+            <parent>system:cdap-data-pipeline[5.1.0,6.0.0-SNAPSHOT)</parent>
+            <parent>system:cdap-data-streams[5.1.0,6.0.0-SNAPSHOT)</parent>
           </cdapArtifacts>
         </configuration>
         <executions>
