--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>co.cask.hydrator</groupId>
   <artifactId>kafka-plugins</artifactId>
   <packaging>pom</packaging>
-  <version>1.9.0-SNAPSHOT</version>
+  <version>1.9.0</version>
 
   <licenses>
     <license>
@@ -97,8 +97,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>5.1.0-SNAPSHOT</cdap.version>
-    <hydrator.version>2.1.0-SNAPSHOT</hydrator.version>
+    <cdap.version>5.1.0</cdap.version>
+    <hydrator.version>2.1.0</hydrator.version>
     <spark1.version>1.6.1</spark1.version>
     <spark2.version>2.2.0</spark2.version>
     <widgets.dir>widgets</widgets.dir>
