--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>co.cask.hydrator</groupId>
   <artifactId>kafka-plugins</artifactId>
   <packaging>pom</packaging>
-  <version>1.9.0</version>
+  <version>2.0.0-SNAPSHOT</version>
 
   <licenses>
     <license>
