--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>co.cask.hydrator</groupId>
   <artifactId>kafka-plugins</artifactId>
   <packaging>pom</packaging>
-  <version>2.0.2-SNAPSHOT</version>
+  <version>2.0.2</version>
 
   <licenses>
     <license>
@@ -98,7 +98,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>5.1.3-SNAPSHOT</cdap.version>
+    <cdap.version>5.1.3</cdap.version>
     <hydrator.version>2.1.2</hydrator.version>
     <spark1.version>1.6.1</spark1.version>
     <spark2.version>2.2.0</spark2.version>
