--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>io.cdap.plugin</groupId>
   <artifactId>kafka-plugins</artifactId>
   <packaging>pom</packaging>
-  <version>2.1.0</version>
+  <version>2.1.1-SNAPSHOT</version>
 
   <licenses>
     <license>
@@ -94,8 +94,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>6.0.0</cdap.version>
-    <cdap.plugin.version>2.2.0</cdap.plugin.version>
+    <cdap.version>6.0.1-SNAPSHOT</cdap.version>
+    <cdap.plugin.version>2.2.1-SNAPSHOT</cdap.plugin.version>
     <spark1.version>1.6.1</spark1.version>
     <spark2.version>2.2.0</spark2.version>
     <widgets.dir>widgets</widgets.dir>
