--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>io.cdap.plugin</groupId>
   <artifactId>kafka-plugins</artifactId>
   <packaging>pom</packaging>
-  <version>2.2.0-SNAPSHOT</version>
+  <version>2.2.0</version>
 
   <licenses>
     <license>
