--- a/kafka-plugins-0.8/pom.xml
+++ b/kafka-plugins-0.8/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>kafka-plugins</artifactId>
     <groupId>io.cdap.plugin</groupId>
-    <version>2.2.1-SNAPSHOT</version>
+    <version>2.2.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -171,8 +171,8 @@
         <version>1.1.0</version>
         <configuration>
           <cdapArtifacts>
-            <parent>system:cdap-data-pipeline[6.1.0-SNAPSHOT,7.0.0-SNAPSHOT)</parent>
-            <parent>system:cdap-data-streams[6.1.0-SNAPSHOT,7.0.0-SNAPSHOT)</parent>
+            <parent>system:cdap-data-pipeline[6.1.2,7.0.0-SNAPSHOT)</parent>
+            <parent>system:cdap-data-streams[6.1.2,7.0.0-SNAPSHOT)</parent>
           </cdapArtifacts>
         </configuration>
         <executions>
