--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>io.cdap.plugin</groupId>
   <artifactId>kafka-plugins</artifactId>
   <packaging>pom</packaging>
-  <version>2.2.3</version>
+  <version>2.2.4-SNAPSHOT</version>
   <description>Plugins for Apache Kafka</description>
   <url>https://github.com/data-integrations/kafka-plugins</url>
 
