--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>6.8.0-SNAPSHOT</cdap.version>
+    <cdap.version>6.8.0</cdap.version>
     <cdap.plugin.version>2.10.0-SNAPSHOT</cdap.plugin.version>
     <spark3.version>3.1.2</spark3.version>
     <widgets.dir>widgets</widgets.dir>
@@ -340,7 +340,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.14.1</version>
         <configuration>
-          <argLine>-Xmx2048m -Djava.awt.headless=true -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC -XX:OnOutOfMemoryError="kill -9 %p" -XX:+HeapDumpOnOutOfMemoryError</argLine>
+          <argLine>-Xmx2048m -Djava.awt.headless=true -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC
+            -XX:OnOutOfMemoryError="kill -9 %p" -XX:+HeapDumpOnOutOfMemoryError
+          </argLine>
           <reuseForks>false</reuseForks>
         </configuration>
       </plugin>
@@ -350,7 +352,9 @@
     <profile>
       <id>cloudBuild</id>
       <activation>
-        <property><name>cloudBuild</name></property>
+        <property>
+          <name>cloudBuild</name>
+        </property>
       </activation>
       <build>
         <plugins>
